--- a/android/workload/app/src/main/res/values/strings.xml
+++ b/android/workload/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_activity_calendar">Time Monitor</string>
     <string name="shibboleth_authenticator">Shibboleth TU Dresden</string>
     <string name="title_activity_select_lecture">SelectLecture</string>
+    <string name="title_activity_enter_workload">EnterWorkload</string>
 </resources>
