adding syncadapter service and the authenticator to the app. The plan is that the service triggers the authenticator to start the login procedure if he is not already authenticated. This one in turn should bring up an activity to log in, but only if the app is in foreground

--- a/android/workload/app/src/main/res/values/strings.xml
+++ b/android/workload/app/src/main/res/values/strings.xml
@@ -1,14 +1,15 @@
 <resources>
     <string name="app_name">Workload</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_manage_lectures">Manage Lectures</string>
     <string name="action_my_statistics">Statistics</string>
     <string name="action_privacy_agreement">Privacy Agreement</string>
     <string name="action_logout">Logout</string>
     <string name="title_activity_calendar">Time Monitor</string>
-    <string name="shibboleth_authenticator">Shibboleth TU Dresden</string>
+    <string name="shibboleth_authenticator">Survey TU Dresden</string>
     <string name="title_activity_select_lecture">SelectLecture</string>
     <string name="title_activity_enter_workload">EnterWorkload</string>
+    <string name="content_provider_authority">de.tu-dresden.zqa.survey</string>
+    <string name="account_type">de.tu-dresden.zqa.survey</string>
 </resources>
