--- a/android/workload/app/src/main/res/values/strings.xml
+++ b/android/workload/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">Workload</string>
 
     <string name="action_settings">Settings</string>
-    <string name="action_manage_lectures">Manage Lectures</string>
-    <string name="action_my_statistics">Statistics</string>
+    <string name="action_manage_lectures">Lectures</string>
+    <string name="action_statistics">Statistics</string>
     <string name="action_privacy_agreement">Privacy Agreement</string>
     <string name="action_logout">Logout</string>
     <string name="title_activity_calendar">Time Monitor</string>
