--- a/android/workload/app/src/main/res/values/strings.xml
+++ b/android/workload/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="content_provider_authority">de.tu-dresden.zqa.survey</string>
     <string name="account_type">tu-dresden.de</string>
     <string name="title_activity_web_login">Shibboleth Login</string>
+    <string name="workentry_table_name">workentries</string>
+    <string name="lectures_table_name">lectures</string>
 </resources>
