--- a/android/workload/app/src/main/res/values/strings.xml
+++ b/android/workload/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_manage_lectures">Lectures</string>
     <string name="action_statistics">Statistics</string>
     <string name="action_privacy_agreement">Privacy Agreement</string>
-    <string name="action_logout">Logout</string>
+    <string name="action_about">About</string>
     <string name="title_activity_calendar">Time Monitor</string>
     <string name="shibboleth_authenticator">TU Dresden</string>
     <string name="title_activity_select_lecture">SelectLecture</string>
