--- a/android/workload/app/src/main/res/values/strings.xml
+++ b/android/workload/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_manage_lectures">Lectures</string>
     <string name="action_statistics">Statistics</string>
+    <string name="action_reminder_toggle">Weekly Reminder</string>
     <string name="action_privacy_agreement">Privacy Agreement</string>
     <string name="action_about">About</string>
     <string name="title_activity_calendar">Time Monitor</string>
@@ -26,5 +27,10 @@ Zu Zwecken der Qualitätssicherung nach § 9 SächsHSFG, hier insbesondere § 9 
 
     <string name="reminder_title">Some data still missing</string>
     <string name="reminder_text">No data has been entered yet for at least one lecture.</string>
+
+
+
+    <!-- String constants -->
+    <string name="show_reminder_notification">show_reminder_notification</string>
 
 </resources>
